<resources>
    <string name="app_name">FullPaper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textoUsuario">Enter your ID</string>
    <string name="textoPassword">Enter your password</string>
    <string name="textoRegistrar">Register</string>
    <string name="textoLogin">Login</string>
    <string name="textoID">0000</string>
    <string name="textoName">XXXX</string>
    <string name="textoShowPassword">0000</string>
    <string name="textoIcon">Icon</string>
</resources>